use more modern Java features