@@ -19,7 +19,6 @@ import java.util.stream.Stream;
 import static java.util.Collections.list;
 import static java.util.Collections.reverse;
 import static java.util.regex.Pattern.CASE_INSENSITIVE;
-import static java.util.stream.Collectors.toList;
 
 /**
  * This class provides various utility static methods,
@@ -33,9 +32,9 @@ public class InetAddressUtils {
 	public static final Pattern HOSTNAME_REGEX = Pattern.compile("(\\b(((?!25?[6-9])[12]\\d|[1-9])?\\d\\.?\\b){4}\\b)|(?<!(\\w|:))(([0-9a-f]{1,4}:){7,7}[0-9a-f]{1,4}|([0-9a-f]{1,4}:){1,7}:|([0-9a-f]{1,4}:){1,6}:[0-9a-f]{1,4}|([0-9a-f]{1,4}:){1,5}(:[0-9a-f]{1,4}){1,2}|([0-9a-f]{1,4}:){1,4}(:[0-9a-f]{1,4}){1,3}|([0-9a-f]{1,4}:){1,3}(:[0-9a-f]{1,4}){1,4}|([0-9a-f]{1,4}:){1,2}(:[0-9a-f]{1,4}){1,5}|[0-9a-f]{1,4}:((:[0-9a-f]{1,4}){1,6})|:((:[0-9a-f]{1,4}){1,7}|:)|fe80:(:[0-9a-f]{0,4}){0,4}%[0-9a-zA-Z]{1,}|::(ffff(:0{1,4}){0,1}:){0,1}((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])|([0-9a-f]{1,4}:){1,4}:((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])\\.){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]))(?!(\\w|:))|(\\b(([a-z]|[a-z0-9][a-z0-9\\-]*[a-z0-9])\\.)+([a-z0-9]{2,})\\.?(?!(\\w|\\.)))", CASE_INSENSITIVE);
 
 	public static InetAddress startRangeByNetmask(InetAddress address, InetAddress netmask) {
-		byte[] addressBytes = address.getAddress();
-		byte[] netmaskBytes = netmask.getAddress();
-		for (int i = 0; i < addressBytes.length; i++) {
+		var addressBytes = address.getAddress();
+		var netmaskBytes = netmask.getAddress();
+		for (var i = 0; i < addressBytes.length; i++) {
 			addressBytes[i] = i < netmaskBytes.length ? (byte) (addressBytes[i] & netmaskBytes[i]) : 0;
 		}
 		try {
@@ -48,9 +47,9 @@ public class InetAddressUtils {
 	}
 
 	public static InetAddress endRangeByNetmask(InetAddress address, InetAddress netmask) {
-		byte[] netmaskBytes = netmask.getAddress();
-		byte[] addressBytes = address.getAddress();
-		for (int i = 0; i < addressBytes.length; i++) {
+		var netmaskBytes = netmask.getAddress();
+		var addressBytes = address.getAddress();
+		for (var i = 0; i < addressBytes.length; i++) {
 			addressBytes[i] = (byte) (i < netmaskBytes.length ? (addressBytes[i] | ~(netmaskBytes[i])) : 255);
 		}
 		try {
@@ -67,9 +66,9 @@ public class InetAddressUtils {
 	 * @return true in case inetAddress1 is greater than inetAddress2
 	 */
 	public static boolean greaterThan(InetAddress inetAddress1, InetAddress inetAddress2) {
-		byte[] address1 = inetAddress1.getAddress();
-		byte[] address2 = inetAddress2.getAddress();
-		for (int i = 0; i < address1.length; i++) {
+		var address1 = inetAddress1.getAddress();
+		var address2 = inetAddress2.getAddress();
+		for (var i = 0; i < address1.length; i++) {
 			if ((address1[i] & 0xFF) > (address2[i] & 0xFF))
 				return true;
 			else
@@ -93,8 +92,8 @@ public class InetAddressUtils {
 	 */
 	private static InetAddress modifyInetAddress(InetAddress address, boolean isIncrement) {
 		try {
-			byte[] newAddress = address.getAddress();
-			for (int i = newAddress.length-1; i >= 0; i--) {
+			var newAddress = address.getAddress();
+			for (var i = newAddress.length-1; i >= 0; i--) {
 				if (isIncrement) {
 					if (++newAddress[i] != 0x00) {
 						break;
@@ -125,7 +124,7 @@ public class InetAddressUtils {
 	public static InetAddress parseNetmask(String netmaskString) throws UnknownHostException {
 		if (netmaskString.startsWith("/")) {
 			// CIDR netmask, e.g. "/24" - number of bits set from the left
-			int totalBits = Integer.parseInt(netmaskString.substring(1));
+			var totalBits = Integer.parseInt(netmaskString.substring(1));
 			return parseNetmask(totalBits);
 		}
 
@@ -136,9 +135,9 @@ public class InetAddressUtils {
 	}
 
 	public static InetAddress parseNetmask(int prefixBits) {
-		byte[] mask = new byte[prefixBits > 32 ? 16 : 4];
-		for (int i = 0; i < mask.length; i++) {
-			int curByteBits = Math.min(prefixBits, 8);
+		var mask = new byte[prefixBits > 32 ? 16 : 4];
+		for (var i = 0; i < mask.length; i++) {
+			var curByteBits = Math.min(prefixBits, 8);
 			prefixBits -= curByteBits;
 			mask[i] = (byte)((((1 << curByteBits)-1)<<(8-curByteBits)) & 0xFF);
 		}
@@ -155,7 +154,7 @@ public class InetAddressUtils {
 	 * @param addressBytes this array is modified according to the maskBytes and prototypeBytes
 	 */
 	public static void maskPrototypeAddressBytes(byte[] addressBytes, byte[] maskBytes, byte[] prototypeBytes) {
-		for (int i = 0; i < addressBytes.length; i++) {
+		for (var i = 0; i < addressBytes.length; i++) {
 			addressBytes[i] = (byte) ((addressBytes[i] & ~maskBytes[i]) | (prototypeBytes[i] & maskBytes[i]));
 		}
 	}
@@ -164,8 +163,8 @@ public class InetAddressUtils {
 	 * Checks whether the passed address is likely either a broadcast or network address
 	 */
 	public static boolean isLikelyBroadcast(InetAddress address, InterfaceAddress ifAddr) {
-		byte[] bytes = address.getAddress();
-		int last = bytes.length - 1;
+		var bytes = address.getAddress();
+		var last = bytes.length - 1;
 		if (ifAddr != null) {
 			return address.equals(ifAddr.getBroadcast()) ||
 					// TODO: 0 is actually not correct for smaller networks than /24
@@ -177,17 +176,17 @@ public class InetAddressUtils {
 	public static InterfaceAddress getLocalInterface() {
 		InterfaceAddress anyAddress = null;
 		try {
-			List<NetworkInterface> interfaces = getNetworkInterfaces().stream()
-					.filter(i -> i.getParent() == null && !i.isVirtual()).collect(toList());
+			var interfaces = getNetworkInterfaces().stream()
+					.filter(i -> i.getParent() == null && !i.isVirtual()).toList();
 
-			for (NetworkInterface networkInterface : interfaces) {
+			for (var networkInterface : interfaces) {
 				try {
 					if (networkInterface.getHardwareAddress() == null) continue;
 				} catch (SocketException ignore) {}
 
-				for (InterfaceAddress ifAddr : networkInterface.getInterfaceAddresses()) {
+				for (var ifAddr : networkInterface.getInterfaceAddresses()) {
 					anyAddress = ifAddr;
-					InetAddress addr = ifAddr.getAddress();
+					var addr = ifAddr.getAddress();
 					if (!addr.isLoopbackAddress() && addr instanceof Inet4Address)
 						return ifAddr;
 				}
@@ -213,7 +212,7 @@ public class InetAddressUtils {
 		try {
 			if (address == null) return null;
 			return interfaceStream.filter(i -> i.getInterfaceAddresses().stream().anyMatch(ifAddr -> {
-				InetAddress netmask = parseNetmask(ifAddr.getNetworkPrefixLength());
+				var netmask = parseNetmask(ifAddr.getNetworkPrefixLength());
 				return startRangeByNetmask(address, netmask).equals(startRangeByNetmask(ifAddr.getAddress(), netmask));
 			})).findFirst().orElse(null);
 		}
